Notification Minimalism Settings Main Switch
Add a main preference switch for the lockscreen
notification minimalism feature

Bug: 330387368
Bug: 354047572
Flag: com.android.server.notification.notification_minimalism
Test: atest
LockscreenNotificationMinimalismPreferenceControllerTest

Change-Id: I9aa4c51f9e316dd0dd1529d712b5e9486e43453b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8657,6 +8657,13 @@
     <!-- Configure Notifications: Title for the option controlling notifications for work profile. [CHAR LIMIT=30] -->
     <string name="locked_work_profile_notification_title">When work profile is locked</string>
 
+    <!-- Configure notifications: Title for the option controlling whether or not to minimalize the
+    number of notifications to show on the lock screen[CHAR LIMIT=60] -->
+    <string name="lock_screen_notif_minimalism">Lock screen notification minimalism</string>
+
+    <!-- Configure notifications: Summary for option lock_screen_notif_minimalism. [CHAR LIMIT=100] -->
+    <string name="lock_screen_notif_minimalism_summary">Show fewer notifications on lock screen</string>
+
     <!-- Configure notifications: Title for the option controlling whether only new notifications are displayed to the user
     on the lock screen [CHAR LIMIT=60] -->
     <string name="unseen_notifs_lock_screen">Show only new notifications on lock screen</string>
